[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/targets/Target.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/objects/Block.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/rooms/SmallRoom.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/objects/Column5.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/objects/Ramp.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/maps/MapBase.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/maps/learn/learn_gliding/LearnGlidingMap.lmbake" type="BakedLightmapData" id=7]
[ext_resource path="res://assets/readloud.net/LearnGliding.mp3" type="AudioStream" id=8]
[ext_resource path="res://game/maps/learn/learn_gliding/LearnGlidingMap.gd" type="Script" id=9]

[node name="LearnGlidingMap" instance=ExtResource( 6 )]
script = ExtResource( 9 )
next_map = "res://game/maps/learn/learn_climbing/LearnClimbingMap.tscn"

[node name="ARVROrigin" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 8 )

[node name="LearnGliding" type="AudioStreamPlayer" parent="Sounds" index="3"]
stream = ExtResource( 8 )
autoplay = true

[node name="Environment" type="Spatial" parent="." index="2"]

[node name="SmallRoom" parent="Environment" index="0" instance=ExtResource( 3 )]

[node name="Column5" parent="Environment" index="1" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, -10 )

[node name="Block" parent="Environment" index="2" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.5 )

[node name="Block3" parent="Environment" index="3" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 7.5 )

[node name="Block4" parent="Environment" index="4" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 7.5 )

[node name="Block2" parent="Environment" index="5" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.5 )

[node name="Ramp" parent="Environment" index="6" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5, 0, 1 )

[node name="Ramp2" parent="Environment" index="7" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5, 0, 1 )

[node name="OmniLight" type="OmniLight" parent="Environment" index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 17, 0 )
light_indirect_energy = 0.2
light_size = 1.0
light_bake_mode = 2
shadow_enabled = true
omni_range = 25.0

[node name="BakedLightmap" type="BakedLightmap" parent="Environment" index="9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )
extents = Vector3( 11, 11, 11 )
light_data = ExtResource( 7 )

[node name="Target" parent="." index="3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -9 )
enabled = false

[connection signal="finished" from="Sounds/LearnGliding" to="." method="_on_LearnGliding_finished"]
[connection signal="target_triggered" from="Target" to="." method="_on_Target_target_triggered"]
